lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__preflight-dialog-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                          Landscape: not installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Environment checks──────────────────────────────────────────────────────┐"
"│  Overview            ││> ERROR    0 pass / 0 warn / 1 error / 1 unknown                          │"
"│> Install             │└──────────────────────────────────────────────────────────────────────────┘"
"│  Backup              │┌Install───────────────────────────────────┐┌About: Environment checks─────┐"
"│  Update              ││Version          latest                   ││Read-only deployment checks   │"
"│  Mirror              ││Repository       Config/Default           ││for platform, kernel,         │"
"│  Common software     ││Install root     /root/.lkit/landscape    ││resources, dependencies,      │"
"│  Reinit              ││Admin user       admin                    ││ports, services, and DNS.     │"
"│                 ┌Install blocked───────────────────────────────────────────────┐                 │"
"│                 │             Environment checks block installation            │                 │"
"│                 │                                                              │                 │"
"│                 │          - Port 6443 - stop the conflicting process          │                 │"
"│                 │                           - Port 22                          │                 │"
"│                 │                                                              │                 │"
"│                 │            Enter view details  Esc close  R re-run           │                 │"
"│                 └──────────────────────────────────────────────────────────────┘                 │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"└──────────────────────┘└──────────────────────────────────────────┘└──────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                        [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Enter Details  Esc Close  R Re-run                                                                  "
