lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__reinit-panel-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Reinit──────────────────────────────────────────────────────────────────┐"
"│  Overview            ││Landscape 1.2.3 (systemd, initialization complete)                        │"
"│  Install             ││                                                                          │"
"│  Backup              ││Reinit is unavailable: it needs a systemd installation whose host network │"
"│  Update              ││services were handed over to Landscape (NetworkManager, networking,       │"
"│  Mirror              ││firewalld, systemd-resolved stopped/disabled/masked).                     │"
"│  Common software     ││                                                                          │"
"│> Reinit              ││Use `lkit install --takeover-network` for a first takeover, or run `lkit  │"
"│                      ││reinit` from a terminal.                                                  │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                        [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Ctrl+C Exit  Up/Down Field  Enter Edit / Start  Esc Menu                                            "
