lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__show-psk-dialog-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Overview────────────────────────────────────────────────────────────────┐"
"│> Overview            ││Landscape is installed              │lkit resident service                │"
"│  Install             ││                                    │A systemd service that executes the  │"
"│  Backup              ││Version       1.2.3                 │privileged operations (install,      │"
"│  Update              ││Service       systemd               │update, reinit) delegated by this    │"
"│  Mirror              ││Initialization complete             │console.                             │"
"│  Com┌Recovery psk──────────────────────────────────────────────────────────────────────────┐     │"
"│  Rei│When the network configuration breaks, connect through the flare channel with the     │     │"
"│     │lflare client and this recovery key.                                                  │oy it│"
"│     │                                                                                      │     │"
"│     │> Flare recovery pskrecovery-psk-example                                              │     │"
"│     │Confirm psk                                                                           │     │"
"│     │[ Save ]                                                                              │     │"
"│     │[ Cancel ]                                                                            │     │"
"│     │                                                                                      │     │"
"│     │Arrows Select  Enter Edit / Save  Esc Cancel                                          │     │"
"│     └──────────────────────────────────────────────────────────────────────────────────────┘     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                         Language: English (en)"
"Arrows Select  Enter Edit / Save  Esc Cancel                                                        "
