lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__software-cancel-confirm-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Common software─────────────────────────────────────────────────────────┐"
"│  Overview            ││Host: Debian (bookworm) (package manager: apt)                            │"
"│  Install             ││                                                                          │"
"│  Backup              ││> Docker  [not installed]                                                 │"
"│  Update              ││                                                                          │"
"│  Mirror              ││  Base packages  [5 missing]                                              │"
"│> Common software     ││                                                                          │"
"│  Reinit         ┌Install Docker────────────────────────────────────────────────┐                 │"
"│                 ┌Cancel installation───────────────────────────────────────────┐                 │"
"│                 │The running package manager command is terminated; partially  │                 │"
"│                 │written source files stay and are replaced on the next        │                 │"
"│                 │attempt.                                                      │                 │"
"│                 │                                                              │                 │"
"│                 │Ctrl+C Exit  Enter Cancel install  Esc Keep installing        │                 │"
"│                 └──────────────────────────────────────────────────────────────┘                 │"
"│                 └──────────────────────────────────────────────────────────────┘                 │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Installing Docker…                                                           [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Ctrl+C Exit  Enter Cancel install  Esc Keep installing                                              "
