lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__software-install-confirm-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Common software─────────────────────────────────────────────────────────┐"
"│  Overview            ││Host: Debian (bookworm) (package manager: apt)                            │"
"│  Install             ││                                                                          │"
"│  Backup              ││> Docker  [not installed]                                                 │"
"│  Update              ││                                                                          │"
"│  Mirror              ││  Base packages  [5 missing]                                              │"
"│> Common software     ││                                                                          │"
"│  Reinit              ││                                                                          │"
"│                 ┌Install Docker────────────────────────────────────────────────┐                 │"
"│                 │Choose the source, then confirm.                              │                 │"
"│                 │                                                              │                 │"
"│                 │  Source  ◀ Official repository ▶                             │                 │"
"│                 │                                                              │                 │"
"│                 │Ctrl+C Exit  Left/Right Source  Enter Install  Esc Cancel     │                 │"
"│                 └──────────────────────────────────────────────────────────────┘                 │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                        [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Ctrl+C Exit  Left/Right Source  Enter Install  Esc Cancel                                           "
