lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__software-panel-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Common software─────────────────────────────────────────────────────────┐"
"│  Overview            ││Detecting the host distribution and software status…                      │"
"│  Install             ││                                                                          │"
"│  Backup              ││                                                                          │"
"│  Update              ││                                                                          │"
"│  Mirror              ││                                                                          │"
"│> Common software     ││                                                                          │"
"│  Reinit              ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                        [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Ctrl+C Exit  Up/Down Select  Enter Install  Esc/← Menu                                              "
