lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__takeover-blocking-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"            ┌Network takeover awaiting confirmation────────────────────────────────────┐            "
"            │The Landscape network takeover awaits confirmation and the install is not │            "
"            │committed yet                                                             │            "
"            │                                                                          │            "
"            │transaction: tx-1                                                         │            "
"            │phase: awaiting_network_confirmation                                      │            "
"            │management address: 192.168.10.1/24                                       │            "
"            │confirmation deadline: <DATE>                         │            "
"            │current time: <DATE>                                  │            "
"            │auto rollback in 9m 59s                                                   │            "
"            │                                                                          │            "
"            │Run `lkit network confirm` from any reachable session to commit; the      │            "
"            │install rolls back automatically if the deadline passes, and `lkit network│            "
"            │rollback` also works.                                                     │            "
"            │                                                                          │            "
"            │> Later                                                                   │            "
"            │  Confirm now                                                             │            "
"            │                                                                          │            "
"            └──────────────────────────────────────────────────────────────────────────┘            "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
